simplifying build proccess

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,7 @@ name: Build LSPosed Module
 on:
   push:
     branches: [ "main", "master" ]
-  pull_request:
-    branches: [ "main", "master" ]
-  workflow_dispatch: # Allows manual triggering
+  workflow_dispatch:
 
 jobs:
   build:
@@ -25,16 +23,9 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
 
-    - name: Generate Keystore
-      run: |
-        cd app
-        keytool -genkey -v -keystore release.jks -keyalg RSA -keysize 2048 -validity 10000 -alias key0 -storepass password123 -keypass password123 -dname "CN=DoovFix, OU=Dev, O=Company, L=Loc, S=State, C=US"
-        echo "Keystore generated at app/release.jks"
-
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-      
-    # Fallback to gradle command if gradlew wrapper is missing
+
     - name: Build with Gradle
       run: ./gradlew assembleRelease || gradle assembleRelease
 
